<resources>
    <string name="app_name">AZHAR</string>
    <string name="judulapps">PENJUALAN BUAH AZHAR</string>
    <string name="codebuah">Code Buah</string>
    <string name="jumlahbuah">Jumlah</string>
    <string name="kalkulasi">Hitung</string>
    <string name="input_buah">Input Buah</string>
    <string name="TABLE">TODO</string>
    <string name="total_harga">Total Harga:</string>
    <string name="harga_buah">Harga Buah:</string>
    <string name="nama_buah">Nama Buah:</string>
    <string name="nama">Masukkan Code  Buah</string>
    <string name="jumlah">Masukkan Jumlah Buah</string>
    <string name="codebauh">Code Buah:</string>
    <string name="hargabuah">Harga Buah:</string>

</resources>