<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:background="@drawable/buah"
    android:paddingRight="25dp"
    android:paddingLeft="25dp"
    android:paddingTop="100dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:textColor="#111111"
        android:text="@string/judulapps"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="#111111"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/codebauh"/>
        <EditText
            android:textColor="#111111"
            android:hint="@string/nama"
            android:labelFor="@+id/kode"
            android:layout_marginStart="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/etCodeBuah"
            android:lines="1"
            android:autofillHints=""
            android:layout_marginLeft="7dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#111111"
            android:textSize="18sp"
            android:text="@string/jumlahbuah"/>
        <EditText
            android:textColor="#111111"
            android:hint="@string/jumlah"
            android:labelFor="@+id/etJumlah"
            android:layout_marginStart="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/etJumlahBuah"
            android:autofillHints=""
            android:layout_marginLeft="45dp" />
    </LinearLayout>


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnKalkulasi"
        android:text="@string/kalkulasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/codebauh"
        android:textColor="#090808"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="#111111"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/tvNama_Buah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="#100E0E"
        android:textSize="18sp"
        android:text="@string/hargabuah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="#111111"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/tvHarga_Buah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="18sp"
        android:text="@string/total_harga"
        android:textColor="#0C0B0B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="#111111"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/tvTotal_Harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>